DO328-istio/course/labs/meshintro-bookinfo/reviews-dr.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  labels:
    kiali_wizard: traffic_shifting
  name: reviews
spec:
  host: reviews.meshintro-bookinfo.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
